--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,25 +1,27 @@
 [tool.poetry]
 name = "ycc-hull"
 version = "0.1.0"
-description = ""
-authors = ["Lajos Cseppento <lajos.cseppento@cern.ch>"]
+description = "YCC Hull Backend Service"
+authors = ["Lajos Cseppento <1053931+LajosCseppento@users.noreply.github.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.10"
-Django = "^4.0"
+Django = "^4.0.4"
 djangorestframework = "^3.13.1"
 cx-Oracle = "^8.3.0"
+passlib = "^1.7.4"
 
 [tool.poetry.dev-dependencies]
-black = "^21.12b0"
+black = "^22.3.0"
 flake8 = "^4.0.1"
-mypy = "^0.920"
-pylint = "^2.12.2"
-pytest = "^6.2.5"
+mypy = "^0.950"
+poetryup = "^0.7.1"
+pylint = "^2.13.9"
+pytest = "^7.1.2"
 pytest-cov = "^3.0.0"
 pytest-django = "^4.5.2"
 pytest-html = "^3.1.1"
-pytest-mock = "^3.6.1"
+pytest-mock = "^3.7.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
