--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ pytest = "^7.1.2"
 pytest-cov = "^3.0.0"
 pytest-html = "^3.1.1"
 pytest-mock = "^3.7.0"
+sqlacodegen = "^3.0.0rc1"
 
 [tool.poetry.scripts]
 start-dev = "ycc_hull.main:start_dev"
