--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ black = "^23.1.0"
 Faker = "^18.3.1"
 flake8 = "^6.0.0"
 mypy = "^1.1.1"
+passlib = "^1.7.4"
 pylint = "^2.17.1"
 pytest = "^7.2.2"
 pytest-cov = "^4.0.0"
