--- a/.mypy.ini
+++ b/.mypy.ini
@@ -1,5 +1,8 @@
 [mypy]
 plugins = sqlalchemy.ext.mypy.plugin
 
+[mypy-generated_model]
+ignore_errors = True
+
 [mypy-passlib.*]
 ignore_missing_imports = True
