--- a/.pylintrc
+++ b/.pylintrc
@@ -1,5 +1,6 @@
 [MAIN]
 max-line-length=160
+extension-pkg-allow-list=pydantic
 
 [MESSAGES CONTROL]
 # C0116: allow functions/class methods without a docstring
