--- a/generated_entities/pyproject.toml
+++ b/generated_entities/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
-name = "ycc-hull-generated-model"
+name = "ycc-hull-generated-entities"
 version = "0.0.0"
-description = "YCC Hull Backend Service - Generated Model"
+description = "YCC Hull Backend Service - Generated Entities"
 authors = ["Lajos Cseppentő <1053931+LajosCseppento@users.noreply.github.com>"]
 
 [tool.poetry.dependencies]
