--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,7 +31,5 @@ jobs:
           git status
           poetry run mypy .
           poetry run flake8 .
-          poetry run pylint legacy_password_hashing
-          poetry run pylint test_data
-          poetry run pylint ycc_hull
+          poetry run pylint legacy_password_hashing test_data ycc_hull
           set +x
