--- a/.mypy.ini
+++ b/.mypy.ini
@@ -1,3 +1,6 @@
 [mypy]
 plugins = pydantic.mypy, sqlalchemy.ext.mypy.plugin
 disallow_untyped_defs = True
+
+[mypy-keycloak.*]
+ignore_missing_imports = True
