--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,5 +31,5 @@ jobs:
           git status
           poetry run mypy .
           poetry run flake8 .
-          poetry run pylint legacy_password_hashing test_data ycc_hull
+          poetry run pylint --jobs 0 legacy_password_hashing test_data ycc_hull
           set +x
