--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,12 +24,16 @@ jobs:
         run: |
           poetry run regenerate-test-data
           git status
-      - name: Lint
+      - name: Quick Lint
         run: |
           set -x
           poetry run black .
           git status
           poetry run mypy .
           poetry run flake8 .
+          set +x
+      - name: Pylint
+        run: |
+          set -x
           poetry run pylint --jobs 0 legacy_password_hashing test_data ycc_hull
           set +x
