--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,23 +10,24 @@ python = "~3.9"
 aiofiles = "^23.1.0"
 pyhumps = "^3.8.0"
 # Auth
-python-keycloak = "^2.14.0"
+python-keycloak = "^2.15.3"
 # REST API
-fastapi = "^0.95.0"
+fastapi = "^0.95.1"
 python-multipart = "^0.0.6"
 uvicorn = { extras = ["standard"], version = "^0.21.1" }
 # DB
 oracledb = "^1.3.0"
-SQLAlchemy = { extras = ["asyncio", "mypy"], version = "^2.0.8" }
+SQLAlchemy = { extras = ["asyncio", "mypy"], version = "^2.0.9" }
 
 [tool.poetry.dev-dependencies]
 black = "^23.3.0"
-Faker = "^18.3.2"
+Faker = "^18.4.0"
 flake8 = "^6.0.0"
-mypy = "^1.1.1"
+httpx = "^0.24.0"
+mypy = "^1.2.0"
 passlib = "^1.7.4"
-pylint = "^2.17.1"
-pytest = "^7.2.2"
+pylint = "^2.17.2"
+pytest = "^7.3.1"
 pytest-cov = "^4.0.0"
 pytest-html = "^3.2.0"
 pytest-mock = "^3.10.0"
