--- a/conf/config.json
+++ b/conf/config.json
@@ -6,7 +6,7 @@
     "http://localhost:8080",
     "http://127.0.0.1:8080"
   ],
-  "dbUrl": "oracle+oracledb://ycclocal:changeit@(DESCRIPTION=(ADDRESS=(PROTOCOL=TCP)(HOST=127.0.0.1)(PORT=1521)))",
+  "databaseUrl": "oracle+oracledb://ycclocal:changeit@(DESCRIPTION=(ADDRESS=(PROTOCOL=TCP)(HOST=127.0.0.1)(PORT=1521)))",
   "keycloakServerUrl": "http://localhost:8080",
   "keycloakRealm": "YCC-LOCAL",
   "keycloakClient": "ycc-hull-local",
