--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,7 @@ httpx = "^0.24.0"
 mypy = "^1.2.0"
 passlib = "^1.7.4"
 pylint = "^2.17.2"
+pylint-pydantic ="^0.1.8"
 pytest = "^7.3.1"
 pytest-cov = "^4.0.0"
 pytest-html = "^3.2.0"
