--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,6 +24,8 @@ jobs:
         run: |
           poetry run regenerate-test-data
           git status
+      - name: Test
+        run: poetry run pytest --cov=ycc_hull
       - name: Quick Lint
         run: |
           set -x
