--- a/.pylintrc
+++ b/.pylintrc
@@ -2,6 +2,7 @@
 fail-under=9
 max-line-length=160
 extension-pkg-allow-list=pydantic
+load-plugins=pylint_pydantic
 
 [MESSAGES CONTROL]
 # C0116[missing-function-docstring]: allow functions/class methods without a docstring
