--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,7 +5,18 @@
       "name": "YCC Hull",
       "type": "python",
       "request": "launch",
-      "module": "ycc_hull.main"
+      "module": "ycc_hull.main",
+      "console": "integratedTerminal",
+      "justMyCode": false
+    },
+    {
+      "name": "Python: Debug Tests",
+      "type": "python",
+      "request": "launch",
+      "program": "${file}",
+      "purpose": ["debug-test"],
+      "console": "integratedTerminal",
+      "justMyCode": false
     }
   ]
 }
