--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "ycc-hull"
-version = "0.2.1"
+version = "0.3.0"
 description = "YCC Hull Backend Service"
 authors = ["Lajos Cseppentő <1053931+LajosCseppento@users.noreply.github.com>"]
 
@@ -8,29 +8,33 @@ authors = ["Lajos Cseppentő <1053931+LajosCseppento@users.noreply.github.com>"]
 python = "~3.9"
 # General
 aiofiles = "^23.1.0"
+lxml = "^4.9.2"
 pyhumps = "^3.8.0"
 # Auth
-python-keycloak = "^2.14.0"
+python-keycloak = "^2.15.3"
 # REST API
-fastapi = "^0.95.0"
+fastapi = "^0.95.1"
 python-multipart = "^0.0.6"
 uvicorn = { extras = ["standard"], version = "^0.21.1" }
 # DB
 oracledb = "^1.3.0"
-SQLAlchemy = { extras = ["asyncio", "mypy"], version = "^2.0.8" }
+SQLAlchemy = { extras = ["asyncio", "mypy"], version = "^2.0.9" }
 
 [tool.poetry.dev-dependencies]
 black = "^23.3.0"
-Faker = "^18.3.2"
+Faker = "^18.4.0"
 flake8 = "^6.0.0"
-mypy = "^1.1.1"
+httpx = "^0.24.0"
+mypy = "^1.2.0"
 passlib = "^1.7.4"
-pylint = "^2.17.1"
-pytest = "^7.2.2"
+pylint = "^2.17.2"
+pylint-pydantic ="^0.1.8"
+pytest = "^7.3.1"
 pytest-cov = "^4.0.0"
 pytest-html = "^3.2.0"
 pytest-mock = "^3.10.0"
 types-aiofiles = "^23.1.0.1"
+types-lxml = "^2023.3.28"
 types-passlib = "^1.7.7.11"
 
 [tool.poetry.scripts]
