--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ oracledb = "^2.0.1"
 SQLAlchemy = { extras = ["asyncio", "mypy"], version = "^2.0.25" }
 
 [tool.poetry.dev-dependencies]
+aiosqlite = "^0.19.0"
 black = "^23.12.1"
 Faker = "^22.2.0"
 flake8 = "^7.0.0"
@@ -30,6 +31,7 @@ passlib = "^1.7.4"
 pylint = "^3.0.3"
 pylint-pydantic = "^0.3.2"
 pytest = "^7.4.4"
+pytest-asyncio = "^0.23.3"
 pytest-cov = "^4.1.0"
 pytest-html = "^4.1.1"
 pytest-mock = "^3.12.0"
@@ -41,7 +43,7 @@ types-passlib = "^1.7.7.20240106"
 start = "ycc_hull.main:start"
 generate-test-data = "test_data.generator:generate"
 regenerate-test-data = "test_data.generator:regenerate"
-playground = "test_data.playground:run"
+playground = "test_data.playground:main"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
