--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,47 +1,49 @@
 [tool.poetry]
 name = "ycc-hull"
-version = "0.4.1"
+version = "1.0.0"
 description = "YCC Hull Backend Service"
 authors = ["Lajos Cseppentő <1053931+LajosCseppento@users.noreply.github.com>"]
 
 [tool.poetry.dependencies]
 python = "~3.9"
 # General
-aiofiles = "^23.1.0"
-lxml = "^4.9.2"
+aiofiles = "^23.2.1"
+lxml = "^5.1.0"
 pyhumps = "^3.8.0"
 # Auth
-python-keycloak = "^2.15.3"
+python-keycloak = "^3.7.0"
 # REST API
-fastapi = "^0.95.1"
+fastapi = "^0.109.0"
 python-multipart = "^0.0.6"
-uvicorn = { extras = ["standard"], version = "^0.21.1" }
+uvicorn = { extras = ["standard"], version = "^0.25.0" }
 # DB
-oracledb = "^1.3.0"
-SQLAlchemy = { extras = ["asyncio", "mypy"], version = "^2.0.9" }
+oracledb = "^2.0.1"
+SQLAlchemy = { extras = ["asyncio", "mypy"], version = "^2.0.25" }
 
 [tool.poetry.dev-dependencies]
-black = "^23.3.0"
-Faker = "^18.4.0"
-flake8 = "^6.0.0"
+aiosqlite = "^0.19.0"
+black = "^23.12.1"
+Faker = "^22.2.0"
+flake8 = "^7.0.0"
 httpx = "^0.24.0"
-mypy = "^1.2.0"
+mypy = "^1.8.0"
 passlib = "^1.7.4"
-pylint = "^2.17.2"
-pylint-pydantic ="^0.1.8"
-pytest = "^7.3.1"
-pytest-cov = "^4.0.0"
-pytest-html = "^3.2.0"
-pytest-mock = "^3.10.0"
-types-aiofiles = "^23.1.0.1"
-types-lxml = "^2023.3.28"
-types-passlib = "^1.7.7.11"
+pylint = "^3.0.3"
+pylint-pydantic = "^0.3.2"
+pytest = "^7.4.4"
+pytest-asyncio = "^0.23.3"
+pytest-cov = "^4.1.0"
+pytest-html = "^4.1.1"
+pytest-mock = "^3.12.0"
+types-aiofiles = "^23.2.0.20240106"
+types-lxml = "^2023.10.21"
+types-passlib = "^1.7.7.20240106"
 
 [tool.poetry.scripts]
 start = "ycc_hull.main:start"
 generate-test-data = "test_data.generator:generate"
 regenerate-test-data = "test_data.generator:regenerate"
-playground = "test_data.playground:run"
+playground = "test_data.playground:main"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
