--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,7 +40,7 @@ types-lxml = "^2023.10.21"
 types-passlib = "^1.7.7.20240106"
 
 [tool.poetry.scripts]
-start = "ycc_hull.main:start"
+start = "ycc_hull.main:main"
 generate-test-data = "test_data.generator:generate"
 regenerate-test-data = "test_data.generator:regenerate"
 playground = "test_data.playground:main"
