--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = "YCC Hull Backend Service"
 authors = ["Lajos Cseppentő <1053931+LajosCseppento@users.noreply.github.com>"]
 
 [tool.poetry.dependencies]
-python = "~3.9"
+python = "~3.11"
 # General
 aiofiles = "^23.2.1"
 lxml = "^5.1.0"
@@ -40,7 +40,7 @@ types-lxml = "^2023.10.21"
 types-passlib = "^1.7.7.20240106"
 
 [tool.poetry.scripts]
-start = "ycc_hull.main:start"
+start = "ycc_hull.main:main"
 generate-test-data = "test_data.generator:generate"
 regenerate-test-data = "test_data.generator:regenerate"
 playground = "test_data.playground:main"
