--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ python = "~3.11"
 aiofiles = "^23.2.1"
 lxml = "^5.1.0"
 pyhumps = "^3.8.0"
+toml = "^0.10.2"
 # Auth
 python-keycloak = "^3.7.0"
 # REST API
@@ -38,6 +39,7 @@ pytest-mock = "^3.12.0"
 types-aiofiles = "^23.2.0.20240106"
 types-lxml = "^2023.10.21"
 types-passlib = "^1.7.7.20240106"
+types-toml = "^0.10.8.7"
 
 [tool.poetry.scripts]
 start = "ycc_hull.main:main"
