--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,6 +40,7 @@ pytest-mock = "^3.12.0"
 types-aiofiles = "^23.2.0.20240106"
 types-lxml = "^2023.10.21"
 types-passlib = "^1.7.7.20240106"
+types-requests = "^2.31.0.20240125"
 types-toml = "^0.10.8.7"
 
 [tool.poetry.scripts]
