--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,11 +21,12 @@ uvicorn = { extras = ["standard"], version = "^0.26.0" }
 oracledb = "^2.0.1"
 SQLAlchemy = { extras = ["asyncio", "mypy"], version = "^2.0.25" }
 
-[tool.poetry.dev-dependencies]
+[tool.poetry.group.dev.dependencies]
 aiosqlite = "^0.19.0"
 black = "^23.12.1"
-Faker = "^22.4.0"
+Faker = "^22.5.1"
 flake8 = "^7.0.0"
+locust = "^2.20.1"
 httpx = "^0.24.0"
 mypy = "^1.8.0"
 passlib = "^1.7.4"
@@ -39,6 +40,7 @@ pytest-mock = "^3.12.0"
 types-aiofiles = "^23.2.0.20240106"
 types-lxml = "^2023.10.21"
 types-passlib = "^1.7.7.20240106"
+types-requests = "^2.31.0.20240125"
 types-toml = "^0.10.8.7"
 
 [tool.poetry.scripts]
