Consistent time zone handling for datetime properties

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ python = "~3.11"
 aiofiles = "^23.2.1"
 lxml = "^5.1.0"
 pyhumps = "^3.8.0"
+pytz = "^2024.1"
 toml = "^0.10.2"
 # Auth
 python-keycloak = "^3.9.1"
@@ -40,6 +41,7 @@ pytest-mock = "^3.14.0"
 types-aiofiles = "^23.2.0.20240311"
 types-lxml = "^2024.2.9"
 types-passlib = "^1.7.7.20240311"
+types-pytz = "^2024.1.0.20240203"
 types-requests = "^2.31.0.20240311"
 types-toml = "^0.10.8.7"
 
