Add architecture for e-mail / SMTP + config

--- a/conf/config.json
+++ b/conf/config.json
@@ -12,5 +12,6 @@
   "keycloakClient": "ycc-hull-local",
   "keycloakClientSecret": "SaksuyBhXMq4xuLhHTTUQtXsn3JQ3AiG",
   "keycloakSwaggerClient": "ycc-hull-local-swagger",
-  "uvicornPort": "8000"
+  "uvicornPort": "8000",
+  "yccAppBaseUrl": "http://localhost:3000"
 }
