--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ requires-python = ">=3.12,<3.13"
 dependencies = [
     # General
     "aiofiles>=24.1.0",
-    "lxml>=5.3.1",
+    "lxml[html_clean]>=5.3.1",
     "pyhumps>=3.8.0",
     "pytz>=2025.1",
     "toml>=0.10.2",
@@ -32,21 +32,9 @@ dependencies = [
 packages = [{ include = "ycc_hull", from = "src" }]
 
 [tool.poetry.group.dev.dependencies]
-aiosqlite = "^0.21.0"
-black = "^25.1.0"
 Faker = "^37.0.0"
-flake8 = "^7.1.2"
-locust = "^2.33.2"
 httpx = "^0.28.1"
-mypy = "^1.15.0"
 passlib = "^1.7.4"
-pylint = "^3.3.5"
-pylint-pydantic = "^0.3.5"
-pytest = "^8.3.5"
-pytest-asyncio = "^0.25.3"
-pytest-cov = "^6.0.0"
-pytest-html = "^4.1.1"
-pytest-mock = "^3.14.0"
 sqlacodegen = "^3.0.0"
 types-aiofiles = "^24.1.0.20241221"
 types-lxml = "^2025.3.4"
@@ -54,6 +42,20 @@ types-passlib = "^1.7.7.20241221"
 types-pytz = "^2025.1.0.20250204"
 types-requests = "^2.32.0.20250306"
 types-toml = "^0.10.8.20240310"
+
+[tool.poetry.group.test.dependencies]
+aiosqlite = "^0.21.0"
+black = "^25.1.0"
+flake8 = "^7.1.2"
+locust = "^2.33.2"
+mypy = "^1.15.0"
+pytest = "^8.3.5"
+pylint = "^3.3.5"
+pylint-pydantic = "^0.3.5"
+pytest-asyncio = "^0.25.3"
+pytest-cov = "^6.0.0"
+pytest-html = "^4.1.1"
+pytest-mock = "^3.14.0"
 
 [tool.poetry.scripts]
 start = "ycc_hull.main:main"
