--- a/conf/config.json
+++ b/conf/config.json
@@ -21,6 +21,7 @@
     "clientSecret": "SaksuyBhXMq4xuLhHTTUQtXsn3JQ3AiG",
     "swaggerClient": "ycc-hull-local-swagger"
   },
+  "uvicornPort": "8000",
   "yccApp": {
     "name": "YCC App LOCAL",
     "baseUrl": "http://localhost:3000"
