--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "ycc-hull"
-version = "1.1.1"
+version = "1.2.0"
 description = "YCC Hull Backend Service"
 authors = [
     { name = "Lajos Cseppentő", email = "1053931+LajosCseppento@users.noreply.github.com" },
@@ -64,7 +64,8 @@ pytest-mock = "^3.14.0"
 start = "ycc_hull.main:main"
 generate-test-data = "test_data.generator:generate"
 regenerate-test-data = "test_data.generator:regenerate"
-playground = "test_data.playground:main"
+db-playground = "scripts.db_playground:main"
+email-playground = "scripts.email_playground:main"
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
