--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,8 +33,14 @@ packages = [{ include = "ycc_hull", from = "src" }]
 
 [tool.poetry.group.dev.dependencies]
 Faker = "^37.0.0"
+black = "^25.1.0"
+flake8 = "^7.1.2"
 httpx = "^0.28.1"
+isort = "^6.0.1"
+mypy = "^1.15.0"
 passlib = "^1.7.4"
+pylint = "^3.3.6"
+pylint-pydantic = "^0.3.5"
 sqlacodegen = "^3.0.0"
 types-aiofiles = "^24.1.0.20241221"
 types-lxml = "^2025.3.4"
@@ -44,13 +50,8 @@ types-requests = "^2.32.0.20250306"
 types-toml = "^0.10.8.20240310"
 
 [tool.poetry.group.test.dependencies]
-black = "^25.1.0"
-flake8 = "^7.1.2"
 locust = "^2.33.2"
-mypy = "^1.15.0"
 pytest = "^8.3.5"
-pylint = "^3.3.5"
-pylint-pydantic = "^0.3.5"
 pytest-asyncio = "^0.25.3"
 pytest-cov = "^6.0.0"
 pytest-html = "^4.1.1"
