black friendly isort

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,6 +29,7 @@ jobs:
       - name: Quick Lint
         run: |
           set -x
+          poetry run isort .
           poetry run black .
           git status
           poetry run mypy .
