--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-conf/config-dev*.json
+conf/**/config-*.json
 tmp/
 
 # Created by https://www.toptal.com/developers/gitignore/api/python,pycharm+all
