--- a/conf/logging.conf
+++ b/conf/logging.conf
@@ -27,7 +27,7 @@ args=(sys.stdout,)
 class=handlers.RotatingFileHandler
 level=DEBUG
 formatter=simple
-args=('log/server.log', 'a', 50000000, 5)
+args=('log/server.log', 'a', 50000000, 5, 'utf-8')
 
 [formatter_simple]
 format=%(asctime)s - %(levelname)s - %(name)s - %(message)s
